--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "private": true,
   "homepage": "./",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "analyze": "source-map-explorer build/static/js/*.js"
   },
   "dependencies": {
     "antd": "^4.16.8",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
+    "@craco/craco": "^6.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -33,20 +36,6 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
-  },
-  "babel":{
-    "plugins": [
-      [
-        "import",
-        [
-          {
-            "libraryName": "antd",
-            "libraryDirectory": "es",
-            "style": "css"
-          }
-        ]
-      ]
     ]
   }
 }
