--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "antd": "^4.16.8",
     "axios": "^0.21.1",
+    "highlight.js": "^11.1.0",
     "nprogress": "^0.2.0",
+    "quill-image-extend-module": "^1.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-quill": "^1.3.5",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0"
   },
